--- a/docs/assets/i18n/en-US.json
+++ b/docs/assets/i18n/en-US.json
@@ -3,9 +3,11 @@
     "PTh": "Projects",
     "SKh": "Skills",
     "CTh": "Contact",
+    "CV": "Cv",
     "HOME": "Home",
     "SUBabout": "About me",
     "Subskills": "Skills",
+    "tipCv" : "Download CV",
     "SBhs": "Learn more about me and my journey",
     "SKhs": "All the technologies I developed this application and more.",
     "HELLO": "Hi, I’m Lucas Machado - Front-end developer.",
