adjuste aboute - TIMEWERE

--- a/docs/assets/i18n/en-US.json
+++ b/docs/assets/i18n/en-US.json
@@ -22,7 +22,9 @@
     "ABOUT": "About me",
     "CAREER": "Career",
     "DEV-DESC": "Fullstack Developer",
+    "DEV-DESC2": "FrontEnd Developer",
     "DATECAREER": "Jan 2022 – Sep 2023 • 1 year 7 months",
+    "DATECAREER2": "feb 2024 – the moment",
     "STACK-DESC": "Here, I list some of the services and software that are part of my daily life:",
     "TYPE-STACK1": "Code",
     "TYPE-STACK2": "News",
