--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -22,7 +22,9 @@
     "ABOUT": "Sobre Mim",
     "CAREER": "Carreira",
     "DEV-DESC": "Desenvolvedor Fullstack",
+    "DEV-DESC2": "Desenvolvedor Frontend - Angular",
     "DATECAREER": "jan 2022 – set 2023 • 1 ano 7 meses",
+    "DATECAREER2": "fev 2024 – o momento",
     "SKILL-DESC": "Aqui, listo alguns dos serviços e programas que fazem parte do meu dia a dia:",
     "PLACEHOLDER": "Pesquise pelo item desejado",
     "TYPE-SKILL1": "Estrutura",
